examples/valid/sumatory.ctds
Program {
    int z;
    bool q;
    int b = 1234;
    bool r = false;
    int sumatory(int x) {
        int i = 0;
        int result = 0;
        while (i < x || i == x) {
            result = result + i;
            i = i + 1;
        }
        return result;
    }

    int a = sumatory(20*3);
}
